fix(dropotron): align border-top separation lines in submenus

--- a/user/themes/solstice/src/scss/_style.scss
+++ b/user/themes/solstice/src/scss/_style.scss
@@ -695,7 +695,7 @@ input[type = "button"].fit,
 }
 
 .dropotron > li:first-child {
-    border-top: 0;
+    border-top: solid 1px transparent;
 }
 
 .dropotron > li > a {
